bug fixing, switchting visibilty of contact Overview section

--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -9,6 +9,7 @@ main {
 
   #contactoverview {
     flex: 3;
+    display: block;
   }
 
   @media (max-width: 600px) {
